<resources>
    <string name="app_name">PowerPath</string>
    <string name="your_weight">Your Weight</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="onboarding_msg">Don\'t Worry if you have trouble determining your goals. We can help you determine your goals and track your progress.</string>
    <string name="policy_msg">By continuing you accept our Privacy Policy and Term of Use</string>
    <string name="dot">●</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">704630649665-t4fdjtdotv72o2nav4j11vli5cj6b7go.apps.googleusercontent.com</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="details_exercise">Details Exercise</string>
    <string name="muscle_group">Muscle Group</string>
    <string name="name">Name</string>
    <string name="custom_repetitions">Custom Repetitions</string>
    <string name="custom_weights">Custom Weights</string>
    <string name="full_body">Full Body</string>
    <string name="exercise_1">Exercise 1</string>
    <string name="save">Save</string>
    <string name="let_s_complete_your_profile">Let\'s complete your profile</string>
    <string name="it_will_help_us_to_know_more_about_you">It will help us to know more about you!</string>
    <string name="next">Next</string>
    <string name="hey_there">Hey there,</string>
    <string name="complete_account">Complete Account</string>
    <string name="surname">Surname</string>
    <string name="firstname">Firstname</string>
    <string name="phone_number">Phone Number</string>
    <string name="get_started">Get Started</string>
    <string name="home">Home</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset">Reset</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="notification">Notification</string>
    <string name="track_your_goal">Track Your Goal</string>
    <string name="create_an_account">Create an Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="you_are_all_set_now_let_s_reach_your_goals_together_with_us">You are all set now, let’s reach your goals together with us</string>
    <string name="go_to_home">Go To Home</string>
    <string name="time">Time</string>
    <string name="details_workout">Details Workout</string>
    <string name="choose_exercise">Choose Exercise</string>
    <string name="total_exercises">Total Exercises</string>
    <string name="schedule_workout">Schedule Workout</string>
    <string name="exercises">Exercises</string>
    <string name="set_amount_sets">(Set Amount) Sets</string>
    <string name="set_set_number">Set (Set number)</string>
    <string name="start_workout">Start Workout</string>
    <string name="bmi_body_mass_index">BMI (Body Mass Index)</string>
    <string name="you_have_a_normal_weight">You have a normal weight</string>
    <string name="view_more">View More</string>
    <string name="select_month_1">Select Month 1</string>
    <string name="select_month_2">Select Month 2</string>
    <string name="photo">Photo</string>
    <string name="statistic">Statistic</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="push_strength_increase">Push Strength Increase</string>
    <string name="pull_strength_increase">Pull Strength Increase</string>
    <string name="legs_strength_increase">Legs Strength Increase</string>
    <string name="back_to_home">Back to Home</string>
    <string name="activity">Activity</string>
    <string name="check">Check</string>
    <string name="today_s_workout">Today\'s Workout</string>
    <string name="workout_progress">Workout Progress</string>
    <string name="edit">Edit</string>
    <string name="personal_data">Personal Data</string>
    <string name="account">Account</string>
    <string name="achievement">Achievement</string>
    <string name="activity_history">Activity History</string>
    <string name="languages_setting">Languages Setting</string>
    <string name="pop_up_notification">Pop-up Notification</string>
    <string name="other">Other</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="see_more">See more</string>
    <string name="average_progress">Average Progress</string>
    <string name="good">Good</string>
    <string name="track_your_progress_each">Track Your Progress Each</string>
    <string name="month_with">Month With</string>
    <string name="learn_more">Learn More</string>
    <string name="front_facing">Front Facing</string>
    <string name="back_facing">Back Facing</string>
    <string name="side_facing">Side Facing</string>
    <string name="compare_my_photo">Compare My Photo</string>
    <string name="compare">Compare</string>
    <string name="don_t_miss_your_lowerbody_workout">Don’t miss your lowerbody workout</string>
    <string name="about_3_hours_ago">About 3 hours ago</string>
    <string name="reminder">Reminder!</string>
    <string name="next_photos_fall_on_july_08">Next Photos Fall On July 08</string>
    <string name="camera">Camera</string>">
    <string name="profile">Profile</string>
    <string name="kms">Kms</string>
    <string name="workout_details">Workout Details</string>
    <string name="your_workouts">Your Workouts</string>
    <string name="no_workouts_saved_yet">No workouts saved yet</string>">

    <string name="build_your_workout">Build Your Workout</string>
    <string name="workout_name">Workout Name</string>
    <string name="save_workout">Save Workout</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_muscle_group">Exercise Muscle Group</string>
    <string name="add_exercises">Add Exercises</string>">
    <string name="this_month">This Month</string>
    <string-array name="muscle_groups">
        <item>Legs</item>
        <item>Push</item>
        <item>Pull</item>
    </string-array>
    <string name="enter_sets">Enter Sets</string>
    <string name="biometrics">Biometrics</string>
    <string name="change_weight">Change Weight</string>
    <string name="workout">Workout</string>">

    <string-array name="gender_options">
        <item>Female</item>
        <item>Male</item>
    </string-array>
</resources>