<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#2a2c38"
    android:padding="16dp">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/top_nav"
        app:navigationIcon="@drawable/back_button_home"
        app:title="@string/add_exercises"
        app:titleCentered="true"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_margin="15dp"
        android:gravity="left"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/exercise_muscle_group" />
    <Spinner
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:id="@+id/muscleGroupSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:textSize="18dp"
        android:id="@+id/exerciseNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_name" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>