<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserWorkoutsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/top_nav"
        app:navigationIcon="@drawable/back_button_home"
        app:title="@string/workout_details"
        app:titleCentered="true"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/noWorkouts"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:background="@drawable/gradient_background2"
            android:orientation="vertical"
            android:padding="30sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="15dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/no_workouts_saved_yet"
                    android:textColor="#161818"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/learnMoreImg"
                    android:layout_width="160dp"
                    android:layout_height="107dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/complete_img" />

                <android.widget.Button
                    android:id="@+id/learnMoreBtn"
                    style="@style/Widget.App.Button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:text="@string/add_exercise"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>