<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:fitsSystemWindows="true"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/top_nav"
            app:navigationIcon="@drawable/back_button_home"
            app:title="@string/workout_details"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="347dp"
        android:layout_height="530dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_workout_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_rounded"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:padding="15dp"
                        android:textSize="18dp"
                        android:textColor="#B6B4C1"
                        android:layout_marginLeft="20dp"
                        android:text="@string/total_exercises" />



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/selectWorkoutContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_bg_workout"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:layout_marginHorizontal="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Spinner
                        android:layout_gravity="center_vertical"
                        android:id="@+id/muscleGroupSpinner"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                       android:layout_margin="10dp"
                        android:spinnerMode="dropdown" />

                    <Button
                        android:id="@+id/chooseWorkoutButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Choose Workout"
                        android:layout_gravity="center_vertical"
                        app:layout_constraintTop_toBottomOf="@+id/toolbar"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                 />
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                       android:layout_marginLeft="20dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/exercises"
                        android:layout_gravity="center_vertical"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/setsInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="130dp"
                        android:hint="@string/enter_sets" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/white"
                        android:text="@string/set_set_number" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/exercisesRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                        app:layout_constraintBottom_toTopOf="@+id/startWorkoutButton"
                        android:scrollbarAlwaysDrawVerticalTrack="true" />
                </LinearLayout>

                <android.widget.Button
                    style="@style/Widget.App.Button"
                    android:id="@+id/completeWorkoutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Complete Workout"
                    android:textColor="@android:color/white"
                    android:padding="10dp"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>